# xsettings

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  versions.json
1.5.0/: 404.html  index.html  objects.inv
1.5.0/api/xbool/: index.html
1.5.0/api/xinject/: context.html  dependency.html  errors.html  index.html  proxy.html  pytest_plugin.html
1.5.0/api/xloop/: index.html
1.5.0/api/xsentinels/: singleton.html
1.5.0/api/xsettings/: default_converters.html  env_settings.html  errors.html  fields.html  index.html  retreivers.html  settings.html
1.5.0/changelog/: index.html
1.5.0/search/: search_index.json
xsettings/: fields.py
