[tool.poetry]
name = "xsettings"
version = "1.5.0"
description = "Ways to document, centeralize, retreive and validate settings."
authors = ["Josh Orr <josh@orr.blue>"]
packages = [{include = "xsettings"}]
readme = "README.md"
repository = "https://github.com/joshorr/xsettings"
keywords = ["settings", "lazy", "configuration"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]


[tool.poetry.dependencies]
python = "^3.12"
xsentinels = "^1.2.0"
xinject = "^1.2.0"
xloop = "^1.1.0"
xbool = "^1.0.0"
ciso8601 = "^2.3.0"
setuptools = "^82.0.1"


[tool.poetry.group.dev.dependencies]
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs = "^1.4.0"
mike = "^2"
pytest-pycodestyle = "^2.3.0"
pytest = "^9"
pdoc3 = "^0"
mkdocs-material = "^9"
tomlkit = "^0"
mkdocs-autorefs = "^1"
mkdocstrings = {extras = ["python"], version = "^1.0.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --pycodestyle"
testpaths = ["tests", "xsettings"]

[tool.custom.xpublish]
extra-module-docs = ['xsentinels', 'xloop', 'xinject', 'xbool']

[tool.black]
line-length = 99
target_version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
